--- a/templates/includes/sidebar/main.html
+++ b/templates/includes/sidebar/main.html
@@ -782,6 +782,52 @@
                             </a>
                         </li>
                         
+                        <!-- SMS Management -->
+                        <li class="nav-item has-treeview {% if 'messaging' in request.resolver_match.namespace %}menu-open{% endif %}">
+                            <a href="#" class="nav-link {% if 'messaging' in request.resolver_match.namespace %}active{% endif %}">
+                                <i class="nav-icon fas fa-sms"></i>
+                                <span class="nav-text">SMS Management</span>
+                                <i class="right fas fa-angle-left"></i>
+                            </a>
+                            <ul class="nav nav-treeview">
+                                <li class="nav-item">
+                                    <a class="nav-link {% if request.resolver_match.url_name == 'sms_list' %}active{% endif %}" 
+                                       href="/business/{{ request.tenant.slug }}/messaging/">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <span class="nav-text">SMS Messages</span>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link {% if request.resolver_match.url_name == 'send_sms' %}active{% endif %}" 
+                                       href="/business/{{ request.tenant.slug }}/messaging/send/">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <span class="nav-text">Send SMS</span>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link {% if request.resolver_match.url_name == 'bulk_sms' %}active{% endif %}" 
+                                       href="/business/{{ request.tenant.slug }}/messaging/bulk/">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <span class="nav-text">Bulk SMS</span>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link {% if request.resolver_match.url_name == 'template_list' %}active{% endif %}" 
+                                       href="/business/{{ request.tenant.slug }}/messaging/templates/">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <span class="nav-text">Templates</span>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link {% if request.resolver_match.url_name == 'sms_settings' %}active{% endif %}" 
+                                       href="/business/{{ request.tenant.slug }}/messaging/settings/">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <span class="nav-text">SMS Settings</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                        
                         <li class="nav-item">
                             <a class="nav-link {% if 'feature_settings' in request.resolver_match.url_name %}active{% endif %}" 
                                href="/business/{{ request.tenant.slug }}/business/settings/features/">
