--- a/templates/system_admin/base.html
+++ b/templates/system_admin/base.html
@@ -106,6 +106,12 @@
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link {% if 'sms' in request.resolver_match.url_name %}active{% endif %}" 
+                               href="{% url 'system_admin:sms_management' %}">
+                                <i class="fas fa-sms me-2"></i>SMS Management
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link {% if request.resolver_match.url_name == 'analytics' %}active{% endif %}" 
                                href="{% url 'system_admin:analytics' %}">
                                 <i class="fas fa-chart-bar me-2"></i>Analytics
