--- a/templates/system_admin/sms/providers.html
+++ b/templates/system_admin/sms/providers.html
@@ -65,29 +65,29 @@
                                     </div>
                                 </td>
                                 <td>
-                                    <span class="badge badge-secondary">
+                                    <span class="badge bg-secondary text-white">
                                         {{ provider.get_provider_type_display }}
                                     </span>
                                 </td>
                                 <td>
                                     {% if provider.is_active %}
-                                        <span class="badge badge-success">
+                                        <span class="badge bg-success text-white">
                                             <i class="fas fa-check"></i> Active
                                         </span>
                                     {% else %}
-                                        <span class="badge badge-danger">
+                                        <span class="badge bg-danger text-white">
                                             <i class="fas fa-times"></i> Inactive
                                         </span>
                                     {% endif %}
                                 </td>
                                 <td>
-                                    <span class="badge badge-info">{{ provider.priority }}</span>
+                                    <span class="badge bg-info text-white">{{ provider.priority }}</span>
                                 </td>
                                 <td>
                                     KSh {{ provider.rate_per_sms|floatformat:4 }}
                                 </td>
                                 <td>
-                                    <span class="badge badge-primary">
+                                    <span class="badge bg-primary text-white">
                                         {{ provider.tenantsmsettings_set.count }}
                                     </span>
                                 </td>
