--- a/templates/system_admin/sms/messages.html
+++ b/templates/system_admin/sms/messages.html
@@ -228,7 +228,7 @@
                                 <td>
                                     {% if message.cost %}
                                         <span class="badge bg-secondary">
-                                            ${{ message.cost }}
+                                            KSh {{ message.cost }}
                                         </span>
                                     {% else %}
                                         <span class="text-muted">-</span>
@@ -319,7 +319,7 @@
                                                         </tr>
                                                         <tr>
                                                             <td><strong>Cost:</strong></td>
-                                                            <td>${{ message.cost|default:"-" }}</td>
+                                                            <td>KSh {{ message.cost|default:"-" }}</td>
                                                         </tr>
                                                     </table>
                                                 </div>
