--- a/templates/system_admin/sms/statistics.html
+++ b/templates/system_admin/sms/statistics.html
@@ -187,7 +187,7 @@
                                     </div>
                                     <small>{{ tenant.delivery_rate|floatformat:1 }}%</small>
                                 </td>
-                                <td>${{ tenant.total_cost|floatformat:2 }}</td>
+                                <td>KSh {{ tenant.total_cost|floatformat:2 }}</td>
                             </tr>
                             {% endfor %}
                         </tbody>
@@ -270,7 +270,7 @@
                             <span class="info-box-icon"><i class="fas fa-dollar-sign"></i></span>
                             <div class="info-box-content">
                                 <span class="info-box-text">Total Cost</span>
-                                <span class="info-box-number">${{ cost_analysis.total_cost|floatformat:2 }}</span>
+                                <span class="info-box-number">KSh {{ cost_analysis.total_cost|floatformat:2 }}</span>
                             </div>
                         </div>
                     </div>
@@ -279,7 +279,7 @@
                             <span class="info-box-icon"><i class="fas fa-calculator"></i></span>
                             <div class="info-box-content">
                                 <span class="info-box-text">Avg Cost/SMS</span>
-                                <span class="info-box-number">${{ cost_analysis.avg_cost_per_sms|floatformat:4 }}</span>
+                                <span class="info-box-number">KSh {{ cost_analysis.avg_cost_per_sms|floatformat:4 }}</span>
                             </div>
                         </div>
                     </div>
@@ -392,7 +392,7 @@ document.addEventListener('DOMContentLoaded', function() {
                     beginAtZero: true,
                     ticks: {
                         callback: function(value) {
-                            return '$' + value.toFixed(2);
+                            return 'KSh ' + value.toFixed(2);
                         }
                     }
                 }
