--- a/templates/payments/receipt.html
+++ b/templates/payments/receipt.html
@@ -301,9 +301,9 @@
         <!-- Action Buttons (hidden in print) -->
         <div class="receipt-actions no-print">
             <h4 class="mb-3">Payment Receipt</h4>
-            <button class="btn btn-primary me-2" onclick="printReceipt()">
+            <a href="/business/{{ request.tenant.slug }}/payments/{{ payment.payment_id }}/print/" class="btn btn-primary me-2" target="_blank">
                 <i class="fas fa-print me-2"></i>Print Receipt
-            </button>
+            </a>
             <button class="btn btn-outline-secondary me-2" onclick="downloadPDF()">
                 <i class="fas fa-download me-2"></i>Download PDF
             </button>
