--- a/templates/services/order_receipt.html
+++ b/templates/services/order_receipt.html
@@ -320,7 +320,7 @@
         <!-- Action Buttons (hidden in print) -->
         <div class="receipt-actions no-print">
             <h4 class="mb-3">Payment Receipt</h4>
-            <button class="btn btn-primary me-2" onclick="printReceipt()">
+            <button class="btn btn-primary me-2" onclick="window.open('/business/{{ request.tenant.slug }}/services/orders/{{ service_order.pk }}/receipt/print/', '_blank')">
                 <i class="fas fa-print me-2"></i>Print Receipt
             </button>
             <button class="btn btn-outline-secondary me-2" onclick="downloadPDF()">
